# rm_opvn_windmill

./: CMakeLists.txt  opvn_windmill.xml  package.xml
cfg/: Opvn.cfg
config/: opvn_windmill.yaml
include/rm_opvn_windmill/: opvn_windmill.h
launch/: windmill_proc.launch
model/: polygon_yolox_nano_100_1000.xml  polygon_yolox_nano_100_4000.xml  polygon_yolox_nano_100_epoch_1000_32.xml
src/: opvn_windmill.cpp
